# winrm-mcp-server

./: README.md  mcp_server.json  pyproject.toml  win_mcp_server.py
src/winrm_mcp_server/: server.py
